# flightaware-mcp

./: .gitignore  AGENTS.md  Dockerfile  README.md  build.sh  docker-compose-dev.yaml  docker-compose-swarm.yaml  docker-compose.yaml  pyproject.toml  render.yaml
.github/ISSUE_TEMPLATE/: 0-bug.yaml  config.yml
.github/workflows/: build.yaml  deploy.yaml  issue.yaml  lint.yaml  package.yaml  release.yaml
src/flightaware_mcp/: fa.py  server.py
